fixed browser sync for dev

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="row">
-      <div class="large-12 columns">
+      <div class="large-12 max-width columns">
         <h1>Welcome to Foundation</h1>
       </div>
     </div>
